fixing horizontal scroll view mobile

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -1,5 +1,5 @@
 @media (max-width: 979px) {
-	
+
 	body.toolbarpadding{
 		padding-top:0;
 	}
@@ -10,16 +10,15 @@
 		background-color: transparent;
 		background-image: none;
 	}
-	
+
 }
 @media (max-width: 767px){
-	
+
 	#header,
-	 .wrapper-menu,
-	 .wrapper-bottom-menu,
+	.wrapper-menu,
 	.wrapper-content{
 		margin-left: -20px;
 		margin-right: -20px;
 	}
-	
+
 }
